non blocking read action: memory optimizations
GitOrigin-RevId: 8c4e135dbffb6ee6353d7e2b3dc19f1905e2d1d6